tests/NormalTests/paczka1/fuzzy1/78812494.err
Error in line 1: S968 S130 42,9
Error in line 10: d7KJR4eAg A802 99,5
Error in line 14: d7KJR4eAg S968 73,1
Error in line 20: d7KJR4eAg S679 51,3
Error in line 21: K6x9a62K6x1 S679 51,6
Error in line 31: bCtVrYAh S968 73,8
Error in line 36: 50i S679 73,3
